fixed samples scroll and clipped dialog

--- a/html_app/ui/gen/microscopy.gss.css
+++ b/html_app/ui/gen/microscopy.gss.css
@@ -1008,8 +1008,8 @@ input[type=radio].scb_s_microscopy_if:checked:before {
   border-radius: 14px;
   padding: 4px;
   border: 4px solid white;
-  bottom: 171px;
-  height: 150px;
+  bottom: 142px;
+  height: 192px;
   z-index: 1;
   text-align: left;
   font-size: 10pt;
